remove deprecated set-env

--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         # Due to https://github.com/actions/runner/issues/849, we have to use quotes for '3.0'
         ruby: ["2.7", "3.0", "3.1", head]
     runs-on: ${{ matrix.os }}
@@ -32,14 +32,14 @@ jobs:
       - name: Set ENV for codeclimate (pull_request)
         run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/$GITHUB_HEAD_REF:refs/remotes/origin/$GITHUB_HEAD_REF
-          echo "::set-env name=GIT_BRANCH::$GITHUB_HEAD_REF"
-          echo "::set-env name=GIT_COMMIT_SHA::$(git rev-parse origin/$GITHUB_HEAD_REF)"
+          echo "GIT_BRANCH=$GITHUB_HEAD_REF" >> "$GITHUB_ENV"
+          echo "GIT_COMMIT_SHA=$(git rev-parse origin/$GITHUB_HEAD_REF)" >> "$GITHUB_ENV"
         if: github.event_name == 'pull_request'
 
       - name: Set ENV for codeclimate (push)
         run: |
-          echo "::set-env name=GIT_BRANCH::$GITHUB_REF"
-          echo "::set-env name=GIT_COMMIT_SHA::$GITHUB_SHA"
+          echo "GIT_BRANCH=$GITHUB_REF" >> "$GITHUB_ENV"
+          echo "GIT_COMMIT_SHA=$GITHUB_SHA" >> "$GITHUB_ENV"
         if: github.event_name == 'push'
 
       - name: Download test coverage reporter
