--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -1,4 +1,8 @@
 name: Build Master
+
+env:
+  CC_TEST_REPORTER_URL: https://codeclimate.com/downloads/test-reporter/test-reporter-0.7.0-linux-amd64
+
 on:
   pull_request:
 
