try out of the box reporter action

--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -34,56 +34,62 @@ jobs:
       - name: Run tests
         run: RUBYOPT="-E UTF-8" bundle exec rake
 
-      - name: Set ENV for codeclimate (pull_request)
-        run: |
-          git fetch --no-tags --prune --depth=1 origin +refs/heads/$GITHUB_HEAD_REF:refs/remotes/origin/$GITHUB_HEAD_REF
-          echo "GIT_BRANCH=$GITHUB_HEAD_REF" >> "$GITHUB_ENV"
-          echo "GIT_COMMIT_SHA=$(git rev-parse origin/$GITHUB_HEAD_REF)" >> "$GITHUB_ENV"
-        if: github.event_name == 'pull_request'
-
-      - name: Set ENV for codeclimate (push)
-        run: |
-          echo "GIT_BRANCH=$GITHUB_REF" >> "$GITHUB_ENV"
-          echo "GIT_COMMIT_SHA=$GITHUB_SHA" >> "$GITHUB_ENV"
-        if: github.event_name == 'push'
-
-      - name: Download test coverage reporter
-        run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
-
-      - name: Give test coverage reporter executable permissions
-        run: chmod +x cc-test-reporter
-
-      - name: Save coverage
-        run: ./cc-test-reporter format-coverage --output coverage/codeclimate.${{ matrix.ruby }}.json
-
-      - uses: actions/upload-artifact@v1
+      - name: Code Climate Test Reporter
+        uses: aktions/codeclimate-test-reporter@v1
         with:
-          name: coverage-${{ matrix.ruby }}
-          path: coverage/codeclimate.${{ matrix.ruby }}.json
+          codeclimate-test-reporter-id: ${{ secrets.SIMPLE_SERVICE_CODECLIMATE_ID }}
+          command: after-build
 
-  upload_coverage:
-    runs-on: ubuntu-18.04
+      #- name: Set ENV for codeclimate (pull_request)
+      #  run: |
+      #    git fetch --no-tags --prune --depth=1 origin +refs/heads/$GITHUB_HEAD_REF:refs/remotes/origin/$GITHUB_HEAD_REF
+      #    echo "GIT_BRANCH=$GITHUB_HEAD_REF" >> "$GITHUB_ENV"
+      #    echo "GIT_COMMIT_SHA=$(git rev-parse origin/$GITHUB_HEAD_REF)" >> "$GITHUB_ENV"
+      #  if: github.event_name == 'pull_request'
 
-    needs: test
+      #- name: Set ENV for codeclimate (push)
+      #  run: |
+      #    echo "GIT_BRANCH=$GITHUB_REF" >> "$GITHUB_ENV"
+      #    echo "GIT_COMMIT_SHA=$GITHUB_SHA" >> "$GITHUB_ENV"
+      #  if: github.event_name == 'push'
 
-    steps:
-      - name: Download test coverage reporter
-        run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
+      #- name: Download test coverage reporter
+      #  run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
 
-      - name: Give test coverage reporter executable permissions
-        run: chmod +x cc-test-reporter
+      #- name: Give test coverage reporter executable permissions
+      #  run: chmod +x cc-test-reporter
 
-      - uses: actions/download-artifact@v1
-        with:
-          name: coverage-2.7.0
-          path: coverage
+      #- name: Save coverage
+      #  run: ./cc-test-reporter format-coverage --output coverage/codeclimate.${{ matrix.ruby }}.json
 
-      - uses: actions/download-artifact@v1
-        with:
-          name: coverage-3.2.2
-          path: coverage
+      #- uses: actions/upload-artifact@v1
+      #  with:
+      #    name: coverage-${{ matrix.ruby }}
+      #    path: coverage/codeclimate.${{ matrix.ruby }}.json
 
-      - name: Aggregate & upload results to Code Climate
-        run: |
-          ./cc-test-reporter sum-coverage coverage/codeclimate.*.json
-          ./cc-test-reporter upload-coverage
+  #upload_coverage:
+  #  runs-on: ubuntu-18.04
+
+  #  needs: test
+
+  #  steps:
+  #    - name: Download test coverage reporter
+  #      run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
+
+  #    - name: Give test coverage reporter executable permissions
+  #      run: chmod +x cc-test-reporter
+
+  #    - uses: actions/download-artifact@v1
+  #      with:
+  #        name: coverage-2.7.0
+  #        path: coverage
+
+  #    - uses: actions/download-artifact@v1
+  #      with:
+  #        name: coverage-3.2.2
+  #        path: coverage
+
+  #    - name: Aggregate & upload results to Code Climate
+  #      run: |
+  #        ./cc-test-reporter sum-coverage coverage/codeclimate.*.json
+  #        ./cc-test-reporter upload-coverage
