--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -40,56 +40,32 @@ jobs:
           codeclimate-test-reporter-id: ${{ secrets.SIMPLE_SERVICE_CODECLIMATE_ID }}
           command: after-build
 
-      #- name: Set ENV for codeclimate (pull_request)
-      #  run: |
-      #    git fetch --no-tags --prune --depth=1 origin +refs/heads/$GITHUB_HEAD_REF:refs/remotes/origin/$GITHUB_HEAD_REF
-      #    echo "GIT_BRANCH=$GITHUB_HEAD_REF" >> "$GITHUB_ENV"
-      #    echo "GIT_COMMIT_SHA=$(git rev-parse origin/$GITHUB_HEAD_REF)" >> "$GITHUB_ENV"
-      #  if: github.event_name == 'pull_request'
+  release:
+    name: Gem / Release
+    needs: test # Only release IF the tests pass
+    runs-on: ubuntu-latest
 
-      #- name: Set ENV for codeclimate (push)
-      #  run: |
-      #    echo "GIT_BRANCH=$GITHUB_REF" >> "$GITHUB_ENV"
-      #    echo "GIT_COMMIT_SHA=$GITHUB_SHA" >> "$GITHUB_ENV"
-      #  if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+      - uses: fac/ruby-gem-setup-credentials-action@v2
+        with:
+          token: ${{ secrets.github_token }}
 
-      #- name: Download test coverage reporter
-      #  run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
+      - name: Build Gem
+        run: bundle exec rake build
 
-      #- name: Give test coverage reporter executable permissions
-      #  run: chmod +x cc-test-reporter
+      # Release production gem version from default branch
+      - name: Release Gem
+        if: github.ref == 'refs/heads/master'
+        uses: fac/ruby-gem-push-action@v2
+        with:
+          key: github
 
-      #- name: Save coverage
-      #  run: ./cc-test-reporter format-coverage --output coverage/codeclimate.${{ matrix.ruby }}.json
-
-      #- uses: actions/upload-artifact@v1
-      #  with:
-      #    name: coverage-${{ matrix.ruby }}
-      #    path: coverage/codeclimate.${{ matrix.ruby }}.json
-
-  #upload_coverage:
-  #  runs-on: ubuntu-18.04
-
-  #  needs: test
-
-  #  steps:
-  #    - name: Download test coverage reporter
-  #      run: curl -L $CC_TEST_REPORTER_URL > cc-test-reporter
-
-  #    - name: Give test coverage reporter executable permissions
-  #      run: chmod +x cc-test-reporter
-
-  #    - uses: actions/download-artifact@v1
-  #      with:
-  #        name: coverage-2.7.0
-  #        path: coverage
-
-  #    - uses: actions/download-artifact@v1
-  #      with:
-  #        name: coverage-3.2.2
-  #        path: coverage
-
-  #    - name: Aggregate & upload results to Code Climate
-  #      run: |
-  #        ./cc-test-reporter sum-coverage coverage/codeclimate.*.json
-  #        ./cc-test-reporter upload-coverage
+      # PR branch builds will release pre-release gems
+      - name: Pre-Release Gem
+        if: github.ref != 'refs/heads/master'
+        uses: fac/ruby-gem-push-action@v2
+        with:
+          key: github
+          pre-release: true
