--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -48,6 +48,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2.2"
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - uses: fac/ruby-gem-setup-credentials-action@v2
         with:
           token: ${{ secrets.github_token }}
